@@ -6,6 +6,7 @@ What's New for Skinners (version 0.4.1 - development revision)
 
  - Ability to skip warning when resetting all shortcuts. See "Resetting all shortcuts", below
  - Ability to set default backgrounds and widgets based on defaultID. See "Advanced Usage.txt", section "Overrides.xml", parts 3 and 4
+ - Skin properties set for each background and widget that is active. See "Advanced Usage.txt", sections "Managing Custom Backgrounds" and "Managing Widgets".
  - Advice change - consider providing a defaultID in your default shortcuts. See "Providing default shortcuts", below.
  
 
