@@ -4,6 +4,7 @@ v0.4.1 (Development revision)
 - Skin and script default shortcuts now loaded from defaultID property
 - Ability to set background and widget defaults based on defaultID
 - Ability to skip warning when resetting all shortcuts
+- Skin settings set to identify which backgrounds and widgets have been selected by user
 
 v0.4.0
 - New localisation code
